--- a/index.htm
+++ b/index.htm
@@ -2,8 +2,8 @@
 <html lang="en">                                                                
     <head>                                                                      
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0;url=http://papkasse.dk" />      
-        <link rel="canonical" href="http://papkasse.dk" />                    
+        <meta http-equiv="refresh" content="0;url=https://papkasse.dk" />      
+        <link rel="canonical" href="https://papkasse.dk" />                    
     </head>                                                                                                                                                                  
     <body>
 		no need for www, sending you to: papkasse.dk
